[gd_scene load_steps=5 format=3 uid="uid://swn30c3o82fx"]

[ext_resource type="Script" path="res://Scenes/Obstacle.gd" id="1_1lktk"]
[ext_resource type="Texture2D" uid="uid://cc7icq4im1pi6" path="res://Assets/rock.png" id="3_i1pov"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_i5fij"]
b = Vector2(0, 167)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5oa1d"]
load_path = "res://.godot/imported/rockDown.png-32cf71ce64749a213c4834cd1ddcaedc.ctex"

[node name="ObstacleStandard" type="Node2D"]
script = ExtResource("1_1lktk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(43, 11)

[node name="PlayerCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(12, 240)
shape = SubResource("SegmentShape2D_i5fij")

[node name="RockUp" type="Area2D" parent="."]

[node name="Collision" type="CollisionPolygon2D" parent="RockUp"]
polygon = PackedVector2Array(-54, 0, 53, 0, 46, 60, 41, 64, 33, 134, 28, 134, 16, 236, 9, 236, -17, 114, -25, 107)

[node name="Sprite" type="Sprite2D" parent="RockUp"]
position = Vector2(0, 118)
texture = SubResource("CompressedTexture2D_5oa1d")

[node name="RockDown" type="Area2D" parent="."]

[node name="Collision" type="CollisionPolygon2D" parent="RockDown"]
position = Vector2(0, 647)
polygon = PackedVector2Array(-51, 0, 52, 0, 45, -57, 39, -61, 31, -131, 26, -131, 14, -233, 9, -233, -15, -112, -24, -104)

[node name="Sprite" type="Sprite2D" parent="RockDown"]
position = Vector2(0, 531)
texture = ExtResource("3_i1pov")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_exited" from="PlayerCheck" to="." method="_on_player_check_body_exited"]
[connection signal="body_entered" from="RockUp" to="." method="_on_rock_up_body_entered"]
[connection signal="body_entered" from="RockDown" to="." method="_on_rock_down_body_entered"]
